mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    app: bookmedik
    type: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmedik
      type: database
  template:
    metadata:
      labels:
        app: bookmedik
        type: database
    spec:
      volumes:
        - name: mariadb-pvc
          persistentVolumeClaim:
            claimName: mariadb-pvc
      containers:
        - name: contenedor-mariadb
          image: mariadb
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mariadb-pvc
